# Teste_Software_2024_Santana_Rodrigo

./: README.md  pyproject.toml
atividade1/: main.py
tests/: test_atividade1.py
